<resources>

    <string name="app_name">Done Retail</string>
    <string name="app_logo">Done Retail Management System</string>
    <string name="app_description">A sophisticated approach to supply chain and retail management</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="login">Sign In</string>
    <string name="forgot">Forgot Password?</string>
    <string name="warehouse">Warehouse Management</string>
    <string name="POS">Point Of Sale</string>
    <string name="Shelf">Shelf Management</string>
    <string name="Store">Store Room Management</string>


    <!--Warehouse strings-->
    <string name="string_Pending">Pending Orders</string>
    <string name="string_received">Store Orders</string>
    <string name="string_completed">Completed Orders</string>
    <string name="string_shop">Shops</string>
    <string name="string_order">Orders</string>
    <string name="string_supplier">Suppliers</string>
    <string name="stock_on_hand">Stock On hand</string>
    <string name="stock">Stock</string>
    <string name="returned_stock">Stock Returned</string>
    <string name="text_string">Please select an option</string>

    <string name="summary">Dashboard</string>
    <string name="new_order">New Orders</string>
    <string name="completed_order">Completed Orders</string>

    <string name="stock_item">Add stock item</string>
    <string name="delete_item">Remove stock item</string>

    <!-- TODO: Remove or change this placeholder text -->


    <!--For Category Spinner-->
    <string name="categoryType1">Praise</string>
    <string name="categoryType2">Gripe</string>
    <string name="categoryType3">Suggestion</string>
    <string name="categoryType4">Bug</string>

    <!--For Type Spinner-->
    <string name="Type1">Praise</string>
    <string name="Type2">Gripe</string>
    <string name="Type3">Suggestion</string>
    <string name="Type4">Bug</string>
    <string name="search">Search</string>


    <string name="search_your_recipes">Search Product...</string>
    <string name="meal_categories">Product Categories</string>
    <string name="title_product_list">products</string>
    <string name="title_product_detail">product Detail</string>
    <string name="title_activity_orders">orders</string>
    <string name="tab_text_1">Active Orders</string>
    <string name="tab_text_2">History</string>


    <string-array name="lister">
        <item>5449000009067, RedBul, R33,5</item>
        <item>5449000009066, Rainbow Chicken, R60</item>
        <item>5349000009067, Nutriday Yogurt, R30</item>
        <item>4449000009050, Koo Baked Beans, R15</item>
        <item>5449000009065, Maggie Noodles, R5</item>
    </string-array>


    <!--Warehouse Info Strings-->
    <string-array name="design_patterns">
        <item>Shoprite, Crescent Hill</item>
        <item>Shoprite, Melrose Arch</item>
        <item>Shoprite, Sandton</item>
        <item>Shoprite, South Gate</item>
        <item>Shoprite, Menlyn</item>
        <item>Shoprite, Rosebank</item>
        <item>Shoprite, Bryanston</item>
        <item>Shoprite, Pavillion</item>
        <item>Shoprite, Pretoria</item>
        <item>Shoprite, Arcadia</item>
        <item>Shoprite, Crescent Hill</item>

    </string-array>

    <!--Warehouse Info Strings-->
    <string-array name="supplier_base">

        <item>905 Adams Street, Johannesburg, South Africa</item>
        <item>5500 Oaza Osanagi,  Cape Town, South Africa</item>
        <item>1425 Stokke Parkway,  Stellenbosch South Africa</item>
        <item>825 Old Trail Road,  Somerset West, South Africa</item>
        <item>5204 E. Ben White Boulevard, Rusternburg, South Africa</item>
        <item>3545 North 1st Street,  Upington, South Africa</item>
        <item>301 Washington Street,  Rusternburg, South Africa</item>
        <item>167 Batchelder Road,  Upington, South Africa</item>

    </string-array>

    <string-array name="Stock_base">

        <item>REFRESHMENTS</item>
        <item>5500 Oaza Osanagi,  Cape Town, South Africa</item>
        <item>1425 Stokke Parkway,  Stellenbosch South Africa</item>
        <item>825 Old Trail Road,  Somerset West, South Africa</item>
        <item>5204 E. Ben White Boulevard, Rusternburg, South Africa</item>
        <item>3545 North 1st Street,  Upington, South Africa</item>
        <item>301 Washington Street,  Rusternburg, South Africa</item>
        <item>167 Batchelder Road,  Upington, South Africa</item>

    </string-array>


</resources>
