<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/emailText"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="354dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="311dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/linkForgot"
        android:layout_width="196dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="384dp"
        android:layout_marginTop="473dp"
        android:text="@string/forgot"
        android:textColor="#000000"
        android:visibility="visible"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="359dp"
        android:layout_marginTop="337dp"
        android:layout_marginEnd="311dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="247dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="371dp"
        android:layout_marginTop="396dp"
        android:onClick="start"
        android:text="@string/login"
        android:visibility="visible"
        tools:text="@string/login"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="198dp"
        android:layout_height="192dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="355dp"
        android:layout_marginBottom="386dp"
        app:srcCompat="@drawable/logo" />


</RelativeLayout>