<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WarehouseActivity">


    <Button
        android:id="@+id/btn_stock"
        android:layout_width="830dp"
        android:layout_height="75dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/button_properties"
        android:shadowRadius="5"
        android:text="@string/stock"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_order"
        app:layout_constraintEnd_toEndOf="@id/btn_order"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.6" />


    <Button
        android:id="@+id/btn_order"

        android:layout_width="830dp"
        android:layout_height="75dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/button_properties"
        android:shadowRadius="5"
        android:text="@string/string_order"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_supplier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_stock" />


    <Button
        android:id="@+id/btn_supplier"

        android:layout_width="830dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/button_properties"
        android:shadowRadius="5"
        android:text="@string/string_supplier"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/btn_shops"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_order" />

    <Button
        android:id="@+id/btn_shops"
        android:layout_width="830dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="351dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/button_properties"
        android:shadowRadius="5"
        android:text="@string/string_shop"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_supplier" />


</RelativeLayout>